fix: исправить тест на проверку исключения при загрузке